k8s/notes-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-service
spec:
  type: ClusterIP
  selector:
    app: notes-app
  ports:
  - port: 80
    targetPort: 80
