k8s/notes-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: notes-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-v2
  tls:
    - hosts:
        - notes.devopsdev.wuaze.com
      secretName: notes-tls
  rules:
    - host: notes.devopsdev.wuaze.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-stable
                port:
                  number: 80
